ME_QTRIPDYNAMIC_MODULE_ADVENTURES

--- a/frontend/pages/adventures/index.html
+++ b/frontend/pages/adventures/index.html
@@ -76,6 +76,9 @@
                             Clear
                         </div>
                     </div>
+                    <div class="m-auto rounded">
+                        <button id="newAdventure" class="btn btn-warning">Add New Adventure</button>
+                    </div>
                 </div>
                 <!-- Section to display all selected categories  -->
                 <div class="mt-2" id="category-section">
